[backend/frontend] Feedbacks